[metadata]
name = towel
version = 0.0.1
description = A WSGI-testing framework
author = Inessa Vasilevskaya
author-email = ivasilevskaya@mirantis.com
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Developers
    Environment :: Console

[files]
packages =
   towel 
